  The translated values are converted back to their original values in the
  final output.
  The translations are as follows:
	">=" --> "%%__GE__%%"
	"<=" --> "%%__LE__%%"
	">"  --> "%%__GT__%%"
	"<"  --> "%%__LT__%%"
	"="  --> "%%__EQ__%%"
	""   --> "%%__EMPTY_STRING__%%"
	
Changes from Version 0.0.16 to 0.0.17 [08-Nov-2017]
	
* Prepare code for publication on CRAN. This involves removing references
  to CustomPartition, removing logic for logging, and removing code for
  sourcing other scripts.

Changes from Version 0.0.17 to 0.1.0 [29-Sep-2018]
	
* Version for initial release on CRAN. Implement changes to pass CRAN checks.

Changes from Version 0.0.17 to 1.0.2 [20-Aug-2019]
	
* Set trt_control and permute_arm to NULL when trt is NULL
	
* Correct desirable_response_proportion when desirable_response is
  decreasing
	
Changes from Version 1.0.2 to 1.0.3 [21-Aug-2019]
	
* Correct desirable_response_proportion when desirable_response is
  decreasing and trt_var does not exist
	
* Do not require subgroup mean response to be superior to overall mean
  if scoring function is desirable_response_proportion.

Changes from Version 1.0.3 to 1.0.4 [22-Aug-2019]	

* Make mean_response the default scoring function for a binary response
  single-arm model, and treatment_effect the default scoring function for a
  binary response two-arm model.

Changes from Version 1.0.4 to 1.0.5 [23-Aug-2019]	

* Fix examples that are inconsistent with underlying code

Changes from Version 1.0.5 to 1.0.6 [18-May-2020]
	
* Allow user to set depth of competitor trees

Changes from Version 1.0.6 to 1.0.7 [06-Apr-2022]

* Update examples to fix errors in R CMD check. This involved enclosing
  examples intended to demonstrate errors in \dontrun{...}.
	
* Fix unfactor() function.  Should use single "&" inside any() function.
	
* Use is() function from methods library to test class of data objects
  rather than comparing to a string.