@@ -1,8 +1,8 @@
 Package: TSDT
 Type: Package
 Title: Treatment-Specific Subgroup Detection Tool
-Version: 1.0.7
-Date: 2022-04-06
+Version: 1.0.8
+Date: 2025-01-07
 Authors@R: c(
   person(family = "Battioui",
          given = "Chakib",
@@ -26,13 +26,13 @@ License: GPL (>= 2)
 URL: https://github.com/EliLillyCo/CRAN_TSDT
 BugReports: https://github.com/EliLillyCo/CRAN_TSDT/issues
 Encoding: UTF-8
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 NeedsCompilation: no
-Packaged: 2022-04-06 21:49:12 UTC; c065288
+Packaged: 2025-01-07 21:40:11 UTC; c065288
 Author: Chakib Battioui [aut],
   Brian Denton [aut, cre],
   Lei Shen [ctb],
   Eli Lilly and Company [cph]
 Maintainer: Brian Denton <denton_brian_david@lilly.com>
 Repository: CRAN
-Date/Publication: 2022-04-06 22:22:28 UTC
+Date/Publication: 2025-01-07 22:20:07 UTC
