@@ -1,31 +1,32 @@
-805e941dea37d437e0ba73a6d6c81316 *CHANGELOG
-dcb12b363ad5486e722166ce4621288b *DESCRIPTION
+05dfce7743b3d8433007d216ff109410 *CHANGELOG
+1addf6783d76136a98e546b9b1df7168 *DESCRIPTION
 db65f8e4b13aae7ffa93e1ba8bbb325d *NAMESPACE
 6eee80984ec7acc0c1c52e2e69ae9fa5 *R/Bootstrap.ClassDefinition.R
 e23c65e35d928720c0a22e0d14415a6b *R/Subsample.ClassDefinition.R
 fb24b2b1ffe4f9de736e39a52abc728e *R/TSDT.ClassDefinition.R
-e86539a3b80a5f393577c6525af50e6a *R/TSDT.R
-c0088ecd99b5661f0ef45a8ad8822747 *R/TSDT_CutpointDistribution.ClassDefinition.R
+5d81079d64e902ce0d33aeb3ec0be051 *R/TSDT.R
+e28464ac790ffbe68507fe15ef299da7 *R/TSDT_CutpointDistribution.ClassDefinition.R
 590bb7dd59fde6a88b94778dfc695409 *R/TSDT_Sample.ClassDefinition.R
-d0dc6b11aabd82569ac0405ec768094c *R/TSDT_helper_functions.R
-a01b8d068b22159175f75118eb14545a *R/TSDT_scoring_functions.R
+1f2f6fe4bbb99a6151d5554fc9f621ce *R/TSDT_helper_functions.R
+ae5aa9ec76cf0303e5f5bd78c3b86a02 *R/TSDT_scoring_functions.R
 4e230489c95eb13cf1b896aca61870a1 *R/bootstrap.R
 bffca2361e675075e5e69f65546694c5 *R/parse_party.R
 3c60b98bebaf55c655b7349427b791af *R/parse_rpart.R
 dba07508a89fdd59ea15e89a366f52e6 *R/permutation.R
 16a3a118274133ae615ec7fe2f21e2da *R/subsample.R
-23c1ba21f59e50f7052b9572594aac5d *R/tree_functions.R
-d0e29428579a0e9230b4b23efc3dce0e *R/utility_functions.R
+6be1d5e7b8178f7b8894d8194db29a38 *R/tree_functions.R
+58c994e54a631f0b6fd7cfb4c534c4f0 *R/utility_functions.R
+8faf250d78a120ba4c7ea2186efddd24 *build/partial.rdb
 1b31049e01622f55d3ecd891584835b2 *man/Bootstrap-class.Rd
 e4ca8bfe8bb0ff949b340dd228d64578 *man/BootstrapStatistic-class.Rd
 5f156bc1353365aa1bd37bf9d9e1f4a5 *man/CTree-class.Rd
 06f4d28826479d3781feb6d71f1419ba *man/MOB-class.Rd
 b971d0d14234dc4a408961fd3be884c7 *man/Subsample-class.Rd
 a24b50ac501e3844332938baae289aaa *man/TSDT-class.Rd
-c85cce6d7d63d711642a1ea4fac94580 *man/TSDT.Rd
+e1e31914c634cddff96c7f854d55a02f *man/TSDT.Rd
 39b00815636934b5ecfe321d8b2ec514 *man/TSDT_CutpointDistribution-class.Rd
 5d58cc44d29d999077137a0487058e00 *man/TSDT_Sample-class.Rd
-093c10006577f7f430cb78d7aae11f78 *man/binary_transform.Rd
+180b50cafe5ca5d6cdc13657492814c9 *man/binary_transform.Rd
 ee8bd21068c4373465dbf78c78311b35 *man/bootstrap.Rd
 677c8c98b4bb55dcb836ef67965bb38a *man/ctree_wrapper.Rd
 dad90c6cee9329bdcdd4accf9ee519ad *man/cutpoints.Rd
@@ -43,7 +44,7 @@ b7dde523d1a6bf9355c3603e76b53944 *man/get_trt.Rd
 0ec4a37cdcf05db71eb0a3cb5c308871 *man/get_y.Rd
 d750cc73789a5f47bb1c674d7c7e504b *man/grapes-nin-grapes.Rd
 aadedf0d1dc3a9419163328c39b6a722 *man/hazard_ratio.Rd
-e26187b93ff1e118f456904e2a16a31a *man/mean_deviance_residuals.Rd
+635619cea71c50621f495ed1e125c7f6 *man/mean_deviance_residuals.Rd
 e62fe828ffc57b81a07f7d45bc22a625 *man/mean_response.Rd
 06369a434fb5ad6b17bd5abe6583fa7e *man/mob_wrapper.Rd
 924bb5d6b97879511b4c98daf684bf88 *man/na2empty.Rd
